Hashed RCON password